# clickweave

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md
.claude/: CLAUDE.md
.claude/skills/check-docs-freshness/: SKILL.md
.github/workflows/: release.yml
crates/clickweave-app/: Cargo.toml
crates/clickweave-app/src/: app.rs  editor.rs  executor.rs  main.rs  theme.rs
crates/clickweave-cli/: Cargo.toml
crates/clickweave-cli/src/: args.rs  config.rs  lib.rs  main.rs  renderer.rs  responder.rs
crates/clickweave-cli/src/commands/: mod.rs  run.rs  run_skill.rs  runs.rs  skills.rs
crates/clickweave-cli/tests/: integration.rs
crates/clickweave-core/: Cargo.toml
crates/clickweave-core/src/: app_detection.rs  cdp.rs  chat_trace.rs  chrome_profiles.rs  decision_cache.rs  lib.rs  node_params.rs  output_schema.rs  patch_merge.rs  runtime.rs  runtime_query.rs  sanitize.rs  storage.rs  tool_mapping.rs  validation.rs  variant_index.rs  walkthrough.rs  workflow.rs
crates/clickweave-core/src/storage/: mod.rs  run_storage.rs  tests.rs
crates/clickweave-core/src/validation/: cdp_scope.rs  cycles.rs  edges.rs  loops.rs  mod.rs  test_helpers.rs  variables.rs
crates/clickweave-core/src/walkthrough/: event_coalescing.rs  mod.rs  storage.rs  synthesis.rs  target_resolution.rs  test_helpers.rs  types.rs
crates/clickweave-core/src/walkthrough/synthesis/: tests.rs
crates/clickweave-engine/: Cargo.toml
crates/clickweave-engine/prompts/: agent_system.md
crates/clickweave-engine/src/: cdp_lifecycle.rs  lib.rs
crates/clickweave-engine/tests/: correction_paths.rs  episodic_end_to_end.rs  episodic_store.rs  external_conflict_and_journal_recovery.rs  safety_skill_scope.rs  skill_loop_round_trip.rs  skill_run_privacy_off.rs  skill_run_round_trip.rs  skills_extractor.rs  skills_phase3_e2e.rs  skills_store.rs
crates/clickweave-evals/: Cargo.toml  README.md
crates/clickweave-evals/prompts/: codex_judge.md
crates/clickweave-evals/scenarios/: synthetic_applicable_skill_invocation.json  synthetic_ax_snapshot_expired.json  synthetic_cdp_widen_surface.json  synthetic_electron_pre_cdp.json  synthetic_native_ax_required.json  synthetic_no_progress_replan.json  synthetic_search_cancel_loop_recovery.json  synthetic_three_step_loop_recovery.json  synthetic_wrong_cdp_port_runtime_owned.json
crates/clickweave-evals/src/: lib.rs  main.rs  runner.rs
crates/clickweave-host/: Cargo.toml
crates/clickweave-host/src/: approval.rs  config.rs  context.rs  lib.rs  lifecycle.rs  mcp.rs  run.rs  runs.rs  skills.rs  storage.rs
crates/clickweave-llm/: Cargo.toml
crates/clickweave-llm/eval/: eval.toml  tools.json
crates/clickweave-llm/eval/cases/: app-switch.toml  calc-basic.toml  calc-loop.toml  cdp-electron-message.toml  cdp-wait-loop.toml  conditional-branch.toml  conditional-check.toml  find-and-click.toml  form-entry.toml  keyboard-shortcuts.toml  loop-with-check.toml  message-send.toml  multi-app.toml  multi-turn-redirect.toml  notes-create.toml  redirect-chat-message.toml  redirect-email-reply.toml  redirect-folder-save.toml  redirect-tab-bookmark.toml  screenshot-only.toml  smoke-test.toml  verify-result.toml
crates/clickweave-llm/eval/results/: .gitignore
crates/clickweave-llm/eval/snapshots/: chat-app.txt
crates/clickweave-llm/prompts/: planner.md  walkthrough.md
crates/clickweave-llm/src/: client.rs  image_prep.rs  lib.rs  planner.rs  types.rs
crates/clickweave-llm/src/planner/: assistant.rs  builder.rs  conversation.rs  conversation_loop.rs  mapping.rs  mod.rs  parse.rs  patch.rs  plan.rs  prompt.rs  repair.rs  resolution.rs  summarize.rs  tests.rs  tool_use.rs  types.rs  walkthrough.rs
crates/clickweave-llm/src/planner/tests/: assistant.rs  control_flow.rs  helpers.rs  mod.rs  patch.rs  plan.rs  repair.rs  unit.rs
crates/clickweave-mcp/: Cargo.toml
crates/clickweave-mcp/src/: client.rs  lib.rs  protocol.rs  router.rs
crates/clickweave-tauri/: Cargo.toml  tauri.conf.json
crates/clickweave-tauri/capabilities/: default.json
crates/clickweave-tauri/src/: commands.rs  main.rs
crates/clickweave-tauri/ui/: index.html  package-lock.json  package.json  vite.config.ts
crates/clickweave-tauri/ui/src/: App.tsx  bindings.ts
crates/clickweave-tauri/ui/src/components/: GraphCanvas.tsx  Header.tsx  LogsDrawer.tsx  NodeDetailModal.tsx  NodePalette.tsx  SettingsModal.tsx  Sidebar.tsx  WorkflowNode.tsx
crates/clickweave-tauri/ui/src/store/: useAppStore.ts
docs/: README.md
docs/architecture/: overview.md
docs/concepts/architecture/: crate-architecture.drawio  overview.md  system-overview.drawio
docs/concepts/engine/: execution-engine.drawio  execution.md
docs/concepts/frontend/: architecture.md  frontend-ipc.drawio
docs/concepts/llm/: llm-pipelines.drawio  planning-retries.md
docs/concepts/mcp/: integration.md
docs/engine/: execution.md
docs/frontend/: architecture.md
docs/llm/: planning-retries.md
docs/mcp/: integration.md
docs/reference/architecture/: overview.md
docs/reference/engine/: execution.md
docs/verification/: node-checks.md
projects/example/: workflow.json
scripts/: build-dmg.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  mcp_resolve.rs  menu.rs  privacy.rs
src-tauri/src/commands/: agent.rs  agent_chat.rs  assistant.rs  chrome_profiles.rs  error.rs  executor.rs  mod.rs  planner.rs  planner_session.rs  project.rs  resolution_listener.rs  run_trace.rs  runs.rs  skills.rs  types.rs  walkthrough.rs  walkthrough_enrichment.rs  walkthrough_session.rs
src-tauri/src/commands/agent/: commands.rs  events.rs  forwarder.rs  mod.rs  setup.rs  skill_proposal.rs  smoke_tests.rs  task.rs
src-tauri/src/commands/walkthrough_session/: platform.rs  tests.rs
src-tauri/src/llm/: mod.rs  skill_proposal.rs
src-tauri/src/llm/prompts/: skill_refinement.txt
src-tauri/src/platform/: macos.rs  mod.rs  windows.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  bindings.ts  index.css
(+302 files in other folders)
