[workspace]
resolver = "2"
members = [
    "crates/clickweave-app",
    "crates/clickweave-core",
    "crates/clickweave-llm",
    "crates/clickweave-mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
# Shared dependencies
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal crates
clickweave-core = { path = "crates/clickweave-core" }
clickweave-llm = { path = "crates/clickweave-llm" }
clickweave-mcp = { path = "crates/clickweave-mcp" }
