[package]
name = "clickweave-tauri"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "specta"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }
specta = { version = "2.0.0-rc", features = ["derive"] }
specta-typescript = "0.0.9"
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

image.workspace = true
regex = "1"
# Used by `privacy.rs` for the Spec 2 episodic-store retention sweep
# (D36). Workflow-local + global stores are derived views over
# `events.jsonl` and inherit the trace-retention window — the sweep
# opens each `episodic.sqlite` directly to drop expired rows.
rusqlite = { version = "0.31", features = ["bundled"] }
clickweave-core = { workspace = true, features = ["specta"] }
clickweave-engine = { workspace = true, features = ["specta"] }
clickweave-llm = { workspace = true, features = ["specta"] }
clickweave-mcp.workspace = true

[dev-dependencies]
# `tauri::test::mock_app` / `mock_builder` — used by `run_agent_smoke_tests`.
tauri = { version = "2", features = ["test", "protocol-asset", "specta"] }
# Re-exports `ScriptedLlm`, `StaticMcp`, `NullMcp`, etc. under
# `clickweave_engine::agent::test_stubs` for the rubric-10 smoke test.
clickweave-engine = { workspace = true, features = ["specta", "test-stubs"] }
tempfile = "3"
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
foreign-types = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi",
    "Win32_Graphics_Gdi",
    "Win32_System_Threading",
] }
