[package]
name = "clickweave-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "clickweave"
path = "src/main.rs"

[lib]
name = "clickweave_cli"
path = "src/lib.rs"

[dependencies]
clickweave-host = { workspace = true }

anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }

clap = { version = "4", features = ["derive"] }

[dev-dependencies]
async-trait.workspace = true
chrono.workspace = true
clickweave-engine = { workspace = true, features = ["test-stubs"] }
clickweave-llm = { workspace = true }
tempfile = "3"
