[package]
name = "clickweave-evals"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
blake3 = "1.5"
clickweave-core.workspace = true
clickweave-engine = { workspace = true, features = ["test-stubs"] }
clickweave-llm.workspace = true
clickweave-mcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
