[package]
name = "clickweave-llm"
version.workspace = true
edition.workspace = true

[dependencies]
clickweave-core = { path = "../clickweave-core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
reqwest = { version = "0.12", features = ["json"] }
tracing.workspace = true
uuid.workspace = true
